--- a/Projet1-Images_chiffres/Images_chiffres_CNN.ipynb
+++ b/Projet1-Images_chiffres/Images_chiffres_CNN.ipynb
@@ -218,19 +218,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "38b41552",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Parameters\n",
-    "epochs_cnn = 20\n",
+    "epochs_cnn = 0\n",
     "batch_size_cnn = 100\n",
     "validation_split_cnn = .2\n",
-    "early_stop_cnn = EarlyStopping(monitor=\"val_loss\", patience=5, restore_best_weights=True)\n",
     "k_folds = 5 \n",
     "learning_rate_cnn = 0.001\n",
-    "metric_cnn = \"accuracy\"  #\"SparseCategoricalAccuracy\""
+    "metric_cnn = [\"accuracy\"]  #\"SparseCategoricalAccuracy\"\n",
+    "monitor_callback_cnn = \"val_accuracy\"\n",
+    "patience_callback_cnn = 5\n",
+    "mode_callback_cnn = \"max\""
    ]
   },
   {
@@ -270,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "942c8af6",
    "metadata": {},
    "outputs": [],
@@ -278,25 +280,25 @@
     "def create_cnn_model():\n",
     "    cnn_model = Sequential([\n",
     "        #data_augmentation,\n",
-    "        Conv2D(32, (3, 3), activation='relu', kernel_initializer='he_uniform', input_shape=(28, 28, 1)),\n",
+    "        Conv2D(16, (3, 3), activation='relu', kernel_initializer='he_uniform', input_shape=(28, 28, 1)),\n",
     "        BatchNormalization(),\n",
     "        MaxPooling2D((2, 2)),\n",
     "        Dropout(0.25),\n",
     "\n",
-    "        Conv2D(64, (3, 3), activation='relu', kernel_initializer='he_uniform'),\n",
+    "        Conv2D(32, (3, 3), activation='relu', kernel_initializer='he_uniform'),\n",
     "        BatchNormalization(),\n",
     "        MaxPooling2D((2, 2)),\n",
     "        Dropout(0.25),\n",
     "\n",
     "        Flatten(),\n",
-    "        Dense(128, kernel_initializer='he_uniform', activation='relu'),\n",
+    "        Dense(64, kernel_initializer='he_uniform', activation='relu'),\n",
     "        Dropout(0.3),\n",
     "        Dense(10, activation='softmax')\n",
     "        ])\n",
     "\n",
     "    cnn_model.compile(optimizer=optimizers.Adam(learning_rate=learning_rate_cnn),\n",
     "                    loss='sparse_categorical_crossentropy',\n",
-    "                    metrics=[metric_cnn]\n",
+    "                    metrics=metric_cnn\n",
     "        )\n",
     "    return cnn_model"
    ]
@@ -365,6 +367,7 @@
     "best_cnn_model = None\n",
     "best_accuracy = 0.0\n",
     "best_cnn_history = None\n",
+    "best_histories = [(None, 0.0) for i in range (k_folds)]\n",
     "\n",
     "# Cross-validation\n",
     "for fold, (train_idx, val_idx) in enumerate(skf.split(X_train_cnn, y_train)):\n",
@@ -383,7 +386,7 @@
     "        epochs=epochs_cnn,\n",
     "        batch_size=batch_size_cnn,\n",
     "        validation_data=(X_val_fold, y_val_fold),\n",
-    "        callbacks=[early_stop_cnn],\n",
+    "        callbacks=[EarlyStopping(monitor=\"val_loss\", patience=5, mode=mode_callback_cnn, restore_best_weights=True)],\n",
     "        verbose=1\n",
     "    )\n",
     "\n",
@@ -393,6 +396,9 @@
     "\n",
     "    # Store the results\n",
     "    fold_results.append(val_accuracy)\n",
+    "\n",
+    "    if val_accuracy > best_histories[fold][1] :\n",
+    "        best_histories[fold] = (cnn_model, val_accuracy)\n",
     "\n",
     "    # Kepp the best model\n",
     "    if val_accuracy > best_accuracy:\n",
