--- a/Projet1-Images_chiffres/Images_chiffres_Resnet.ipynb
+++ b/Projet1-Images_chiffres/Images_chiffres_Resnet.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "id": "66c334b9",
    "metadata": {},
    "outputs": [],
@@ -216,10 +216,12 @@
     "epochs_resnet = 20\n",
     "batch_size_resnet = 100\n",
     "validation_split_resnet = .2\n",
-    "early_stop_resnet = EarlyStopping(monitor=\"val_loss\", patience=5, restore_best_weights=True, mode=\"min\")\n",
     "k_folds = 5\n",
     "learning_rate_resnet = 0.001\n",
-    "metric_resnet = \"accuracy\"  #\"SparseCategoricalAccuracy\""
+    "metric_resnet = [\"accuracy\"]  #\"SparseCategoricalAccuracy\"\n",
+    "monitor_callback_resnet = \"val_accuracy\"\n",
+    "patience_callback_resnet = 5\n",
+    "mode_callback_resnet = \"max\""
    ]
   },
   {
@@ -289,7 +291,7 @@
     "    model = Model(inputs=inputs, outputs=outputs)\n",
     "    model.compile(optimizer=optimizers.Adam(learning_rate=learning_rate_resnet),\n",
     "                  loss='sparse_categorical_crossentropy',\n",
-    "                  metrics=[metric_resnet])\n",
+    "                  metrics=metric_resnet)\n",
     "    return model"
    ]
   },
@@ -344,7 +346,7 @@
     "        epochs=epochs_resnet,\n",
     "        batch_size=batch_size_resnet,\n",
     "        validation_data=(X_val_fold, y_val_fold),\n",
-    "        callbacks=[early_stop_resnet],\n",
+    "        callbacks=[EarlyStopping(monitor=monitor_callback_resnet, patience=patience_callback_resnet, mode=mode_callback_resnet, restore_best_weights=True, mode=\"min\")],\n",
     "        verbose=1\n",
     "    )\n",
     "\n",
