--- a/Projet1-Images_chiffres/Images_chiffres_Resnet.ipynb
+++ b/Projet1-Images_chiffres/Images_chiffres_Resnet.ipynb
@@ -214,13 +214,13 @@
    "source": [
     "# Parameters\n",
     "epochs_resnet = 20\n",
-    "batch_size_resnet = 100\n",
+    "batch_size_resnet = 64\n",
     "validation_split_resnet = .2\n",
     "k_folds = 5\n",
     "learning_rate_resnet = 0.001\n",
     "metric_resnet = [\"accuracy\"]  #\"SparseCategoricalAccuracy\"\n",
     "monitor_callback_resnet = \"val_accuracy\"\n",
-    "patience_callback_resnet = 5\n",
+    "patience_callback_resnet = 4\n",
     "mode_callback_resnet = \"max\""
    ]
   },
@@ -250,9 +250,9 @@
     "\n",
     "    x_shortcut = input\n",
     "    x = BatchNormalization()(input)\n",
-    "    # x = Activation('relu')(x)\n",
-    "    # x = Conv2D(input_channels, (1, 1))(x)\n",
-    "    # x = BatchNormalization()(x)\n",
+    "    x = Activation('relu')(x)\n",
+    "    x = Conv2D(input_channels, (1, 1))(x)\n",
+    "    x = BatchNormalization()(x)\n",
     "    x = Activation('relu')(x)\n",
     "    x = Conv2D(input_channels, kernel_size, padding='same', strides=stride)(x)\n",
     "    x = BatchNormalization()(x)\n",
@@ -405,8 +405,8 @@
     "# summarize history for accuracy\n",
     "plt.figure(figsize=(12, 4))\n",
     "plt.subplot(1, 2, 1)\n",
-    "plt.plot(best_resnet_history.history[metric_dense], label='Dense Train')\n",
-    "plt.plot(best_resnet_history.history['val_' + metric_dense], label='Dense Val')\n",
+    "plt.plot(best_resnet_history.history['accuracy'], label='Dense Train')\n",
+    "plt.plot(best_resnet_history.history['val_accuracy'], label='Dense Val')\n",
     "plt.title('Dense Model Accuracy')\n",
     "plt.ylabel('Accuracy')\n",
     "plt.xlabel('Epoch')\n",
