--- a/Projet2-Deeploc/Deeploc.ipynb
+++ b/Projet2-Deeploc/Deeploc.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "f5d9f9db",
    "metadata": {},
    "outputs": [
@@ -30,7 +30,7 @@
     "import numpy as np\n",
     "from sklearn.model_selection import train_test_split\n",
     "from tensorflow.keras.models import Sequential\n",
-    "from tensorflow.keras.layers import Dense, Flatten, Dropout\n",
+    "from tensorflow.keras.layers import Dense, Flatten, Dropout, LSTM, Masking\n",
     "from tensorflow.keras.optimizers import Adam\n",
     "from matplotlib import pyplot as plt"
    ]
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "7b15d21e",
    "metadata": {},
    "outputs": [
@@ -189,25 +189,28 @@
     }
    ],
    "source": [
-    "# Filtering sequences with length >= 10000\n",
-    "filtered_df = train_df[train_df[\"Sequence\"].str.len() <= 10000]\n",
+    "filter_long_sequences = True\n",
     "\n",
-    "sequences = filtered_df[\"Sequence\"].values\n",
-    "labels = filtered_df.drop(columns=[\"ACC\", \"Sequence\"]).values\n",
+    "if filter_long_sequences :\n",
+    "    # Filtering sequences with length >= 10000\n",
+    "    filtered_df = train_df[train_df[\"Sequence\"].str.len() <= 10000]\n",
     "\n",
-    "# Find the maximum sequence length\n",
-    "sequence_lengths = [len(seq) for seq in sequences]\n",
-    "max_length = max(sequence_lengths)\n",
-    "print(f\"Maximum sequence length: {max_length}\")\n",
+    "    sequences = filtered_df[\"Sequence\"].values\n",
+    "    labels = filtered_df.drop(columns=[\"ACC\", \"Sequence\"]).values\n",
     "\n",
-    "# Create the histogram with log scale\n",
-    "plt.figure(figsize=(10, 6))\n",
-    "plt.hist(sequence_lengths, bins=30, edgecolor='black', alpha=0.7, log=True)\n",
-    "plt.title(\"Distribution of Protein Sequence Lengths (Log Scale)\")\n",
-    "plt.xlabel(\"Sequence Length (number of amino acids)\")\n",
-    "plt.ylabel(\"Number of Sequences (log scale)\")\n",
-    "plt.grid(True, linestyle='--', alpha=0.5)\n",
-    "plt.show()"
+    "    # Find the maximum sequence length\n",
+    "    sequence_lengths = [len(seq) for seq in sequences]\n",
+    "    max_length = max(sequence_lengths)\n",
+    "    print(f\"Maximum sequence length: {max_length}\")\n",
+    "\n",
+    "    # Create the histogram with log scale\n",
+    "    plt.figure(figsize=(10, 6))\n",
+    "    plt.hist(sequence_lengths, bins=30, edgecolor='black', alpha=0.7, log=True)\n",
+    "    plt.title(\"Distribution of Protein Sequence Lengths (Log Scale)\")\n",
+    "    plt.xlabel(\"Sequence Length (number of amino acids)\")\n",
+    "    plt.ylabel(\"Number of Sequences (log scale)\")\n",
+    "    plt.grid(True, linestyle='--', alpha=0.5)\n",
+    "    plt.show()"
    ]
   },
   {
@@ -236,18 +239,57 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c25c041d",
+   "metadata": {},
+   "source": [
+    "## Model Dense"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "aaa46c0e",
+   "metadata": {},
+   "source": [
+    "### Parameters"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0456e4a4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_size = 0.2\n",
+    "epochs = 20,\n",
+    "batch_size = 32,\n",
+    "learning_rate = 0.001\n",
+    "loss = 'binary_crossentropy'\n",
+    "metrics = ['accuracy']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e53c89de",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Split data into training and testing sets\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=test_size)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "32babd38",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Split data into training and testing sets\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2)\n",
-    "\n",
     "# Define the dense model\n",
     "model = Sequential([\n",
-    "    Flatten(input_shape=(max_length, 20)),  \n",
+    "    Flatten(input_shape=(max_length, len(amino_acids))),  \n",
     "    Dense(512, activation='relu'),\n",
     "    Dropout(0.5),\n",
     "    Dense(256, activation='relu'),\n",
@@ -256,18 +298,137 @@
     "])\n",
     "\n",
     "# Compile the model\n",
-    "model.compile(optimizer=Adam(learning_rate=0.001),\n",
-    "              loss='binary_crossentropy',\n",
-    "              metrics=['accuracy'])\n",
+    "model.compile(optimizer=Adam(learning_rate=learning_rate),\n",
+    "              loss=loss,\n",
+    "              metrics=metrics)\n",
     "\n",
     "# Display model summary\n",
-    "model.summary()\n",
-    "\n",
+    "model.summary()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "aec814c8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Train the model\n",
     "history = model.fit(X_train, y_train,\n",
-    "                    epochs=20,\n",
-    "                    batch_size=32,\n",
-    "                    validation_data=(X_test, y_test))\n"
+    "                    epochs=epochs,\n",
+    "                    batch_size=batch_size,\n",
+    "                    validation_data=(X_test, y_test))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0eb2e274",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Evaluate the model\n",
+    "loss, accuracy = model.evaluate(X_test, y_test)\n",
+    "print(f\"Test Loss: {loss:.4f}\")\n",
+    "print(f\"Test Accuracy: {accuracy:.4f}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e6c5e0b1",
+   "metadata": {},
+   "source": [
+    "## Modele LSTM"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c9ca08cc",
+   "metadata": {},
+   "source": [
+    "### Parameters"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7b5065f5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_size = 0.2\n",
+    "epochs = 20,\n",
+    "batch_size = 32,\n",
+    "learning_rate = 0.001\n",
+    "loss = 'binary_crossentropy'\n",
+    "metrics = ['accuracy']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "555d6deb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Split data into training and testing sets\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=test_size)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7089c3c6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = Sequential([\n",
+    "    # Masquer les timesteps vides (si les séquences ont des longueurs variables)\n",
+    "    Masking(mask_value=0.0, input_shape=(max_length, len(amino_acids))),\n",
+    "\n",
+    "    LSTM(128, return_sequences=True),\n",
+    "    Dropout(0.5),\n",
+    "\n",
+    "    LSTM(64),\n",
+    "    Dropout(0.5),\n",
+    "\n",
+    "    Dense(12, activation='sigmoid')\n",
+    "])\n",
+    "\n",
+    "# Compile the model\n",
+    "model.compile(optimizer=Adam(learning_rate=learning_rate),\n",
+    "              loss=loss,\n",
+    "              metrics=metrics)\n",
+    "\n",
+    "# Display model summary\n",
+    "model.summary()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a48f08c4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Train the model\n",
+    "history = model.fit(X_train, y_train,\n",
+    "                    epochs=epochs,\n",
+    "                    batch_size=batch_size,\n",
+    "                    validation_data=(X_test, y_test))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cb97f729",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Evaluate the model\n",
+    "loss, accuracy = model.evaluate(X_test, y_test)\n",
+    "print(f\"Test Loss: {loss:.4f}\")\n",
+    "print(f\"Test Accuracy: {accuracy:.4f}\")"
    ]
   }
  ],
