Deeploc improvment, gridsearch

--- a/Projet1-MNIST_Modified/MNIST_Modified_Resnet.ipynb
+++ b/Projet1-MNIST_Modified/MNIST_Modified_Resnet.ipynb
@@ -51,15 +51,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "id": "a2f5f66b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_train = np.load(\"Images/train_images.npy\") \n",
-    "y_train = np.load(\"Images/train_labels.npy\") \n",
-    "X_test = np.load(\"Images/test_images.npy\")  \n",
-    "y_test = np.load(\"Images/test_labels.npy\")  "
+    "X_train = np.load(\"Data/train_images.npy\") \n",
+    "y_train = np.load(\"Data/train_labels.npy\") \n",
+    "X_test = np.load(\"Data/test_images.npy\")  \n",
+    "y_test = np.load(\"Data/test_labels.npy\")  "
    ]
   },
   {
