--- a/Projet2-Deeploc/Deeploc_SimpleRNN.ipynb
+++ b/Projet2-Deeploc/Deeploc_SimpleRNN.ipynb
@@ -12,7 +12,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "id": "f5d9f9db",
       "metadata": {
         "id": "f5d9f9db"
@@ -22,7 +22,7 @@
         "import pandas as pd\n",
         "import numpy as np\n",
         "from tensorflow.keras.models import Sequential\n",
-        "from tensorflow.keras.layers import Embedding, SimpleRNN, Dense, Dropout, Masking, LSTM\n",
+        "from tensorflow.keras.layers import Embedding, SimpleRNN, Dense, Dropout, Masking\n",
         "from tensorflow.keras.optimizers import Adam\n",
         "from sklearn.model_selection import train_test_split\n",
         "from sklearn.metrics import roc_curve, roc_auc_score, confusion_matrix, roc_curve, auc\n",
@@ -55,7 +55,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "id": "266e9d74",
       "metadata": {
         "id": "266e9d74"
@@ -67,7 +67,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "id": "ZgF46ns2znet",
       "metadata": {
         "id": "ZgF46ns2znet"
@@ -81,7 +81,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "id": "2yBIskHez3RG",
       "metadata": {
         "id": "2yBIskHez3RG"
@@ -112,7 +112,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 6,
       "id": "RZ9sK2Yfz66B",
       "metadata": {
         "id": "RZ9sK2Yfz66B"
@@ -125,7 +125,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 7,
       "id": "vPRUM9G1_vc-",
       "metadata": {
         "colab": {
@@ -152,7 +152,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 8,
       "id": "qEKBEuPN_zJy",
       "metadata": {
         "colab": {
@@ -184,7 +184,7 @@
         "id": "e6c5e0b1"
       },
       "source": [
-        "## 2 - Modele LSTM\n"
+        "## 2 - Modele SimpleRNN"
       ]
     },
     {
@@ -199,7 +199,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 9,
       "id": "7b5065f5",
       "metadata": {
         "id": "7b5065f5"
@@ -218,7 +218,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 10,
       "id": "555d6deb",
       "metadata": {
         "id": "555d6deb"
@@ -231,7 +231,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 11,
       "id": "EKvR6NSKoAfv",
       "metadata": {
         "id": "EKvR6NSKoAfv"
@@ -240,14 +240,14 @@
       "source": [
         "param_grid = {\n",
         "    'learning_rate': [0.001, 0.01],\n",
-        "    'dropout_rate': [0.2, 0.3],   #   [0.2, 0.3]\n",
-        "    'batch_size': [32, 64]    #   [32, 64]\n",
+        "    'dropout_rate': [0.3],   #   [0.2, 0.3]\n",
+        "    'batch_size': [64]    #   [32, 64]\n",
         "}"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 12,
       "id": "7089c3c6",
       "metadata": {
         "id": "7089c3c6"
@@ -256,21 +256,19 @@
       "source": [
         "def create_and_train_model(X_train, y_train, learning_rate, dropout_rate, batch_size, epochs):\n",
         "    model = Sequential([\n",
-        "    # Embedding layer to transform indices into dense vectors\n",
-        "    Embedding(\n",
-        "        input_dim=vocab_size,\n",
-        "        output_dim=embedding_dim,\n",
-        "        input_length=1000,\n",
-        "        mask_zero=True  # Mask zeros (padding)\n",
-        "    ),\n",
-        "    # Mask empty timesteps\n",
-        "    Masking(mask_value=0.0),\n",
-        "    LSTM(128, return_sequences=True),\n",
-        "    Dropout(dropout_rate),\n",
-        "    LSTM(64),\n",
-        "    Dropout(dropout_rate),\n",
-        "    Dense(11, activation='sigmoid')  # Ensure the number of neurons matches y.shape[1]\n",
-        "])\n",
+        "        Embedding(\n",
+        "            input_dim=vocab_size,\n",
+        "            output_dim=embedding_dim,\n",
+        "            input_length=1000,\n",
+        "            mask_zero=True\n",
+        "        ),\n",
+        "        Masking(mask_value=0.0),\n",
+        "        SimpleRNN(64, return_sequences=True),\n",
+        "        Dropout(dropout_rate),\n",
+        "        SimpleRNN(32),\n",
+        "        Dropout(dropout_rate),\n",
+        "        Dense(11, activation='sigmoid')\n",
+        "    ])\n",
         "    model.compile(\n",
         "        optimizer=Adam(learning_rate=learning_rate),\n",
         "        loss='binary_crossentropy',\n",
@@ -288,7 +286,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 13,
       "id": "JxDk0qVaoDQF",
       "metadata": {
         "colab": {
@@ -369,7 +367,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 14,
       "id": "oIIu_bN4oGrB",
       "metadata": {
         "colab": {
@@ -396,9 +394,9 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "id": "JaTmdQeOzIuy",
+      "id": "iyOAO5uEzZDt",
       "metadata": {
-        "id": "JaTmdQeOzIuy"
+        "id": "iyOAO5uEzZDt"
       },
       "outputs": [],
       "source": [
@@ -407,7 +405,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 15,
       "id": "a48f08c4",
       "metadata": {
         "colab": {
@@ -455,7 +453,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 16,
       "id": "EQAk6TFnocX1",
       "metadata": {
         "colab": {
