--- a/Projet2-Deeploc/Deeploc_MLP.ipynb
+++ b/Projet2-Deeploc/Deeploc_MLP.ipynb
@@ -12,7 +12,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 14,
       "id": "f5d9f9db",
       "metadata": {
         "id": "f5d9f9db"
@@ -22,7 +22,7 @@
         "import pandas as pd\n",
         "import numpy as np\n",
         "from tensorflow.keras.models import Sequential\n",
-        "from tensorflow.keras.layers import Embedding, SimpleRNN, Dense, Dropout, Masking, LSTM\n",
+        "from tensorflow.keras.layers import Embedding, SimpleRNN, Dense, Dropout, Masking, GlobalAveragePooling1D\n",
         "from tensorflow.keras.optimizers import Adam\n",
         "from sklearn.model_selection import train_test_split\n",
         "from sklearn.metrics import roc_curve, roc_auc_score, confusion_matrix, roc_curve, auc\n",
@@ -43,7 +43,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 15,
       "id": "aid3lwVJFMwY",
       "metadata": {
         "id": "aid3lwVJFMwY"
@@ -55,7 +55,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 16,
       "id": "266e9d74",
       "metadata": {
         "id": "266e9d74"
@@ -67,7 +67,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 17,
       "id": "ZgF46ns2znet",
       "metadata": {
         "id": "ZgF46ns2znet"
@@ -81,7 +81,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 18,
       "id": "2yBIskHez3RG",
       "metadata": {
         "id": "2yBIskHez3RG"
@@ -112,7 +112,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 19,
       "id": "RZ9sK2Yfz66B",
       "metadata": {
         "id": "RZ9sK2Yfz66B"
@@ -125,7 +125,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 20,
       "id": "vPRUM9G1_vc-",
       "metadata": {
         "colab": {
@@ -152,7 +152,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 21,
       "id": "qEKBEuPN_zJy",
       "metadata": {
         "colab": {
@@ -184,7 +184,7 @@
         "id": "e6c5e0b1"
       },
       "source": [
-        "## 2 - Modele LSTM\n"
+        "## 2 - Modele MLP"
       ]
     },
     {
@@ -199,7 +199,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 22,
       "id": "7b5065f5",
       "metadata": {
         "id": "7b5065f5"
@@ -208,17 +208,17 @@
       "source": [
         "test_size = 0.2\n",
         "embedding_dim = 32\n",
-        "epochs = 2\n",
+        "epochs = 30\n",
         "loss = 'binary_crossentropy'\n",
         "metrics = ['accuracy']\n",
         "monitor_callback = \"val_accuracy\"\n",
-        "patience_callback = 5\n",
+        "patience_callback = 3\n",
         "mode_callback = None #\"max\""
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 23,
       "id": "555d6deb",
       "metadata": {
         "id": "555d6deb"
@@ -231,7 +231,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 24,
       "id": "EKvR6NSKoAfv",
       "metadata": {
         "id": "EKvR6NSKoAfv"
@@ -241,13 +241,13 @@
         "param_grid = {\n",
         "    'learning_rate': [0.001, 0.01],\n",
         "    'dropout_rate': [0.2, 0.3],   #   [0.2, 0.3]\n",
-        "    'batch_size': [32, 64]    #   [32, 64]\n",
+        "    'batch_size': [32, 64]   #   [32, 64]\n",
         "}"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 25,
       "id": "7089c3c6",
       "metadata": {
         "id": "7089c3c6"
@@ -263,12 +263,13 @@
         "        input_length=1000,\n",
         "        mask_zero=True  # Mask zeros (padding)\n",
         "    ),\n",
-        "    # Mask empty timesteps\n",
-        "    Masking(mask_value=0.0),\n",
-        "    LSTM(128, return_sequences=True),\n",
-        "    Dropout(dropout_rate),\n",
-        "    LSTM(64),\n",
-        "    Dropout(dropout_rate),\n",
+        "    # Use GlobalAveragePooling1D to convert variable-length sequences to fixed-length vectors\n",
+        "    GlobalAveragePooling1D(),\n",
+        "    # MLP layers\n",
+        "    Dense(256, activation='relu'),\n",
+        "    Dropout(0.3),\n",
+        "    Dense(128, activation='relu'),\n",
+        "    Dropout(0.3),\n",
         "    Dense(11, activation='sigmoid')  # Ensure the number of neurons matches y.shape[1]\n",
         "])\n",
         "    model.compile(\n",
@@ -302,30 +303,33 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Testing: lr=0.001, dropout=0.3, batch_size=64\n"
+            "Testing: lr=0.001, dropout=0.2, batch_size=32\n",
+            "Epoch 1/30\n"
           ]
         },
         {
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "/usr/local/lib/python3.12/dist-packages/keras/src/layers/core/embedding.py:97: UserWarning: Argument `input_length` is deprecated. Just remove it.\n",
-            "  warnings.warn(\n"
+            "/home/hbreton/Projets/2-Projets_courts/.venv/lib/python3.13/site-packages/keras/src/layers/core/embedding.py:97: UserWarning: Argument `input_length` is deprecated. Just remove it.\n",
+            "  warnings.warn(\n",
+            "WARNING: All log messages before absl::InitializeLog() is called are written to STDERR\n",
+            "E0000 00:00:1758635227.323124   95038 cuda_executor.cc:1309] INTERNAL: CUDA Runtime error: Failed call to cudaGetRuntimeVersion: Error loading CUDA libraries. GPU will not be used.: Error loading CUDA libraries. GPU will not be used.\n",
+            "W0000 00:00:1758635227.334269   95038 gpu_device.cc:2342] Cannot dlopen some GPU libraries. Please make sure the missing libraries mentioned above are installed properly if you would like to use GPU. Follow the guide at https://www.tensorflow.org/install/gpu for how to download and setup the required libraries for your platform.\n",
+            "Skipping registering GPU devices...\n"
           ]
         },
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Epoch 1/2\n",
-            "\u001b[1m284/284\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m52s\u001b[0m 164ms/step - accuracy: 0.2406 - loss: 0.4439 - val_accuracy: 0.1875 - val_loss: 0.3546\n",
-            "Epoch 2/2\n",
-            "\u001b[1m284/284\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m42s\u001b[0m 149ms/step - accuracy: 0.2576 - loss: 0.3641 - val_accuracy: 0.3038 - val_loss: 0.3534\n",
-            "Testing: lr=0.01, dropout=0.3, batch_size=64\n",
-            "Epoch 1/2\n",
-            "\u001b[1m284/284\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m53s\u001b[0m 163ms/step - accuracy: 0.2364 - loss: 0.3979 - val_accuracy: 0.1850 - val_loss: 0.3602\n",
-            "Epoch 2/2\n",
-            "\u001b[1m284/284\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m43s\u001b[0m 151ms/step - accuracy: 0.2509 - loss: 0.3587 - val_accuracy: 0.3074 - val_loss: 0.3576\n"
+            "\u001b[1m567/567\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m5s\u001b[0m 7ms/step - accuracy: 0.3109 - loss: 0.3551 - val_accuracy: 0.3784 - val_loss: 0.3204\n",
+            "Epoch 2/30\n",
+            "\u001b[1m567/567\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m4s\u001b[0m 7ms/step - accuracy: 0.4066 - loss: 0.3232 - val_accuracy: 0.4330 - val_loss: 0.3097\n",
+            "Epoch 3/30\n",
+            "\u001b[1m567/567\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m4s\u001b[0m 7ms/step - accuracy: 0.4406 - loss: 0.3153 - val_accuracy: 0.4515 - val_loss: 0.3058\n",
+            "Epoch 4/30\n",
+            "\u001b[1m517/567\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m━━\u001b[0m \u001b[1m0s\u001b[0m 6ms/step - accuracy: 0.4536 - loss: 0.3099"
           ]
         }
       ],
@@ -396,9 +400,9 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "id": "JaTmdQeOzIuy",
+      "id": "0_Ctw-zny3_z",
       "metadata": {
-        "id": "JaTmdQeOzIuy"
+        "id": "0_Ctw-zny3_z"
       },
       "outputs": [],
       "source": [
@@ -488,7 +492,8 @@
       "provenance": []
     },
     "kernelspec": {
-      "display_name": "Python 3",
+      "display_name": "2-projets-courts",
+      "language": "python",
       "name": "python3"
     },
     "language_info": {
