modifs run fonction eager

--- a/Projet1-MNIST_Modified/MNIST_Modified_CNN.ipynb
+++ b/Projet1-MNIST_Modified/MNIST_Modified_CNN.ipynb
@@ -44,12 +44,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "7eed6feb",
    "metadata": {},
    "outputs": [],
    "source": [
-    "run_functions_eagerly((True))"
+    "#run_functions_eagerly((True))"
    ]
   },
   {
