--- a/Projet1-MNIST_Modified/MNIST_Modified_CNN_nested_cv.ipynb
+++ b/Projet1-MNIST_Modified/MNIST_Modified_CNN_nested_cv.ipynb
@@ -35,14 +35,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": null,
       "id": "7eed6feb",
       "metadata": {
         "id": "7eed6feb"
       },
       "outputs": [],
       "source": [
-        "run_functions_eagerly((True))"
+        "#run_functions_eagerly((True))"
       ]
     },
     {
@@ -469,7 +469,7 @@
         "                epochs=epochs_cnn,\n",
         "                batch_size=params['batch_size'],\n",
         "                validation_data=(X_inner_val, y_inner_val),\n",
-        "                callbacks=[EarlyStopping(monitor=monitor_callback_cnn, patience=patience_callback_cnn, mode='max', restore_best_weights=True)],\n",
+        "                callbacks=[EarlyStopping(monitor=monitor_callback_cnn, patience=patience_callback_cnn, restore_best_weights=True)],\n",
         "                verbose=1\n",
         "            )\n",
         "\n",
