--- a/Projet1-MNIST_Modified/MNIST_Modified_Resnet.ipynb
+++ b/Projet1-MNIST_Modified/MNIST_Modified_Resnet.ipynb
@@ -33,12 +33,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "id": "7eed6feb",
    "metadata": {},
    "outputs": [],
    "source": [
-    "run_functions_eagerly((True))"
+    "#run_functions_eagerly((True))"
    ]
   },
   {
