add confusion matrix

--- a/Projet2-Deeploc/Deeploc_LSTM.ipynb
+++ b/Projet2-Deeploc/Deeploc_LSTM.ipynb
@@ -479,6 +479,52 @@
         "print(f\"Test Loss: {test_loss:.4f}\")\n",
         "print(f\"Test Accuracy: {test_accuracy:.4f}\")"
       ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "209cf7ca",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Predict classes using the cnn model\n",
+        "y_pred_cnn = best_model.predict(X_test)\n",
+        "y_pred_classes = np.argmax(y_pred_cnn, axis=1)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "ca89e7e9",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Confusion matrix\n",
+        "matrix = confusion_matrix(y_test, y_pred_classes)  # Compare true labels (y_test) and predicted labels (y_pred_classes_dense)\n",
+        "\n",
+        "# Plot confusion matrix\n",
+        "sns.heatmap(matrix, annot=True, fmt='d', cmap='Blues')\n",
+        "plt.xlabel('Predicted label')\n",
+        "plt.ylabel('True label')\n",
+        "plt.title('Confusion Matrix (CNN Modele)')\n",
+        "plt.show()\n",
+        "\n",
+        "# Calculate Sensitivity (SEV) and Specificity (SPE) for each class\n",
+        "for i in range(matrix.shape[0]):\n",
+        "    tp = matrix[i, i]\n",
+        "    fn = np.sum(matrix[i, :]) - tp\n",
+        "    fp = np.sum(matrix[:, i]) - tp\n",
+        "    tn = np.sum(matrix) - tp - fn - fp\n",
+        "    f1 = 2 * tp / (2 * tp + fp + fn) if (2 * tp + fp + fn) > 0 else 0  # F1-score\n",
+        "    sev = tp / (tp + fn) if (tp + fn) > 0 else 0  # Sensitivity (Recall)\n",
+        "    spe = tn / (tn + fp) if (tn + fp) > 0 else 0  # Specificity\n",
+        "    accuracy = (tn + tp) / (tp + fn + tn + fp)\n",
+        "    print(f'Class {i}:')\n",
+        "    print(f'  Sensitivity (SEV): {sev:.4f}')\n",
+        "    print(f'  Specificity (SPE): {spe:.4f}')\n",
+        "    print(f'  Accuracy: {accuracy:.4f}')\n",
+        "    print(f'  F1-score: {f1:.4f}\\n')"
+      ]
     }
   ],
   "metadata": {
