add callback to deeploc fun

--- a/Projet2-Deeploc/Deeploc_MLP.ipynb
+++ b/Projet2-Deeploc/Deeploc_MLP.ipynb
@@ -12,7 +12,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": null,
       "id": "f5d9f9db",
       "metadata": {
         "id": "f5d9f9db"
@@ -28,7 +28,8 @@
         "from sklearn.metrics import roc_curve, roc_auc_score, confusion_matrix, roc_curve, auc\n",
         "import numpy as np\n",
         "import matplotlib.pyplot as plt\n",
-        "import seaborn as sns"
+        "import seaborn as sns\n",
+        "from tensorflow.keras.callbacks import EarlyStopping"
       ]
     },
     {
@@ -282,7 +283,8 @@
         "        batch_size=batch_size,\n",
         "        epochs=epochs,\n",
         "        validation_split=0.2,\n",
-        "        verbose=1\n",
+        "        verbose=1,\n",
+        "        callbacks=[EarlyStopping(monitor=monitor_callback, patience=patience_callback, mode=mode_callback, restore_best_weights=True)]\n",
         "    )\n",
         "    return model, history"
       ]
