--- a/Projet2-Deeploc/Deeploc_LSTM.ipynb
+++ b/Projet2-Deeploc/Deeploc_LSTM.ipynb
@@ -28,7 +28,8 @@
         "from sklearn.metrics import roc_curve, roc_auc_score, confusion_matrix, roc_curve, auc\n",
         "import numpy as np\n",
         "import matplotlib.pyplot as plt\n",
-        "import seaborn as sns"
+        "import seaborn as sns\n",
+        "from tensorflow.keras.callbacks import EarlyStopping"
       ]
     },
     {
@@ -281,7 +282,8 @@
         "        batch_size=batch_size,\n",
         "        epochs=epochs,\n",
         "        validation_split=0.2,\n",
-        "        verbose=1\n",
+        "        verbose=1,\n",
+        "        callbacks=[EarlyStopping(monitor=monitor_callback, patience=patience_callback, mode=mode_callback, restore_best_weights=True)]\n",
         "    )\n",
         "    return model, history"
       ]
